signIn, signUp, and reset password apis done

--- a/android/app/src/main/res/layout/activity_new_password.xml
+++ b/android/app/src/main/res/layout/activity_new_password.xml
@@ -8,6 +8,10 @@
     android:background="@color/colorWhite"
     tools:context=".ui.registration.SignInActivity">
 
+    <include layout="@layout/spinner"
+        android:visibility="gone"
+        android:id="@+id/spinner"/>
+
     <include
         android:id="@+id/layoutToolbar"
         layout="@layout/blue_toolbar"
@@ -64,8 +68,8 @@
             android:fontFamily="@font/muli"
             android:hint="@string/password"
             android:maxLines="1"
+            android:singleLine="true"
             android:inputType="textPassword"
-            android:padding="5sp"
             android:textColor="@color/colorLightGrey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +102,7 @@
             android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:maxLines="1"
-
-            android:padding="5sp"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edPassword"
