--- a/android/app/src/main/res/layout/activity_forget_password.xml
+++ b/android/app/src/main/res/layout/activity_forget_password.xml
@@ -4,92 +4,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorWhite"
+    android:orientation="vertical"
     tools:context=".ui.registration.ForgetPasswordActivity">
 
     <include layout="@layout/blue_toolbar" />
 
-
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="match_parent">
+
+
+        <include
+            android:id="@+id/spinner"
+            layout="@layout/spinner"
+            android:visibility="gone" />
+
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/ivLogo"
-        android:layout_marginBottom="60dp"
-        android:layout_width="180dp"
-        android:layout_height="170dp"
-        android:src="@drawable/ic_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/layoutEmail"
-        app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvTagLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8"
-        android:fontFamily="@font/muli"
-        android:text="@string/splash_tagline"
-        android:textColor="@color/colorLightGrey"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@id/ivLogo"
-        app:layout_constraintStart_toStartOf="@id/ivLogo"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+                <ImageView
+                    android:id="@+id/ivLogo"
+                    android:layout_width="180dp"
+                    android:layout_height="170dp"
+                    android:layout_marginBottom="60dp"
+                    android:src="@drawable/ic_logo"
+                    app:layout_constraintBottom_toBottomOf="@id/layoutEmail"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layoutEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTagLine"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        app:boxBackgroundMode="outline"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:id="@+id/edEmail"
-            android:layout_height="wrap_content"
-            android:padding="5sp"
-            android:maxLines="1"
-
-            android:textColor="@color/review_card_color"
-            android:fontFamily="@font/muli"
-            android:hint="@string/enter_email"
-           />
-    </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:id="@+id/tvTagLine"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_8"
+                    android:fontFamily="@font/muli"
+                    android:text="@string/splash_tagline"
+                    android:textColor="@color/colorLightGrey"
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="@id/ivLogo"
+                    app:layout_constraintStart_toStartOf="@id/ivLogo"
+                    app:layout_constraintTop_toBottomOf="@id/ivLogo" />
 
 
-    <Button
-        android:id="@+id/btnSendOtp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="50dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:layout_marginEnd="50dp"
-        android:text="@string/lbl_send_otp"
-        android:fontFamily="@font/muli"
-        android:background="@drawable/bg_btn_yellow"
-        android:textAllCaps="false"
-        android:textColor="@color/review_card_color"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutEmail" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/layoutEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    app:boxBackgroundMode="outline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvTagLine"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <EditText
+                        android:id="@+id/edEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/muli"
+                        android:hint="@string/enter_email"
+                        android:textSize="@dimen/margin_16"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textColor="@color/review_card_color" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <Button
+                    android:id="@+id/btnSendOtp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="60dp"
+                    android:layout_marginEnd="50dp"
+                    android:background="@drawable/bg_btn_yellow"
+                    android:fontFamily="@font/muli"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:text="@string/lbl_send_otp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/review_card_color"
+                    android:textSize="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/layoutEmail" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
