--- a/android/app/src/main/res/layout/single_item_review_list.xml
+++ b/android/app/src/main/res/layout/single_item_review_list.xml
@@ -6,8 +6,8 @@
     android:layout_marginBottom="8sp"
     android:clickable="true"
     android:focusable="true"
-    app:cardCornerRadius="4dp"
     android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="4dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent">
@@ -66,9 +66,9 @@
             android:drawablePadding="5sp"
             android:fontFamily="@font/muli"
             android:text="5.0"
-            android:tint="@color/buttonBackgroundColor"
             android:textColor="@color/colorDarkGrey"
             android:textSize="16sp"
+            android:tint="@color/buttonBackgroundColor"
             app:layout_constraintEnd_toEndOf="@id/ivAvatar"
             app:layout_constraintStart_toStartOf="@id/ivAvatar"
             app:layout_constraintTop_toBottomOf="@id/ivAvatar" />
@@ -78,10 +78,10 @@
             android:id="@+id/ivEdit"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:padding="4dp"
-            android:src="@drawable/edit"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
+            android:padding="4dp"
+            android:src="@drawable/edit"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -91,31 +91,59 @@
             android:id="@+id/ivDislike"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:padding="4dp"
-            android:layout_marginTop="10sp"
-            android:src="@drawable/dislike"
-            android:visibility="visible"
+            android:layout_marginTop="6sp"
+
+            android:layout_marginEnd="40sp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
+            android:padding="4dp"
+            android:src="@drawable/dislike"
+            android:visibility="visible"
             app:layout_constraintEnd_toStartOf="@id/ivLike"
-            android:layout_marginEnd="@dimen/margin_8"
             app:layout_constraintTop_toBottomOf="@+id/tvReviewDescription"
             app:tint="@color/buttonBackgroundColor" />
+
+        <TextView
+            android:id="@+id/tvDislikeCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_8"
+            android:text="12"
+            android:textColor="@color/text_Color"
+            android:textSize="16sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/ivDislike"
+            app:layout_constraintStart_toEndOf="@id/ivDislike"
+            app:layout_constraintTop_toTopOf="@id/ivDislike" />
 
         <ImageView
             android:id="@+id/ivLike"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:padding="4dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
             android:layout_marginStart="@dimen/margin_8"
             android:layout_marginTop="6dp"
+            android:layout_marginEnd="24dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:padding="4dp"
             android:src="@drawable/like"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvReviewDescription"
             app:tint="@color/buttonBackgroundColor" />
+
+        <TextView
+            android:id="@+id/tvlikeCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_8"
+            android:text="12"
+            android:textColor="@color/text_Color"
+            android:textSize="16sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/ivLike"
+            app:layout_constraintStart_toEndOf="@id/ivLike"
+            app:layout_constraintTop_toTopOf="@id/ivLike" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
