--- a/android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.myapplication.ui.home.HomeFragment"
+        android:name="com.example.myapplication.ui.review.ReviewFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
