--- a/android/app/src/main/res/layout/single_item_review_list.xml
+++ b/android/app/src/main/res/layout/single_item_review_list.xml
@@ -58,6 +58,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tvRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
