--- a/android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/review"
+            android:title="@string/lbl_review" />
         <item
             android:id="@+id/nav_message"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/message"
             android:title="@string/menu_messages" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/setting"
+            android:title="@string/lbl_settings" />
     </group>
 </menu>
