--- a/android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.myapplication.ui.review.ReviewFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:label="@string/lbl_review"
+        tools:layout="@layout/fragment_review" />
 
     <fragment
         android:id="@+id/nav_message"
@@ -20,6 +20,6 @@
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/lbl_settings"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
