--- a/android/app/src/main/res/layout/activity_sign_in.xml
+++ b/android/app/src/main/res/layout/activity_sign_in.xml
@@ -53,6 +53,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/ivLogo">
 
                 <EditText
+                    android:singleLine="true"
                     android:id="@+id/edEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -97,6 +98,7 @@
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="@color/review_card_color"
                     android:textSize="14sp" />
 
