--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -90,6 +90,7 @@
                     android:fontFamily="@font/muli"
                     android:hint="@string/first_name"
                     android:maxLines="1"
+                    android:singleLine="true"
                     android:padding="5sp"
                     android:textColor="@color/review_card_color"
                     android:textSize="14dp" />
@@ -127,6 +128,7 @@
                     android:hint="@string/last_name"
                     android:maxLines="1"
                     android:padding="5sp"
+                    android:singleLine="true"
                     android:textColor="@color/review_card_color"
                     android:textSize="14dp" />
 
@@ -151,6 +153,7 @@
                     android:hint="@string/email"
                     android:maxLines="1"
                     android:padding="5sp"
+                    android:singleLine="true"
                     android:textColor="@color/review_card_color"
                     android:textSize="14dp" />
 
@@ -189,6 +192,7 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:padding="5sp"
+                    android:singleLine="true"
                     android:textColor="@color/review_card_color"
                     android:textSize="14dp" />
 
@@ -226,6 +230,7 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:padding="5sp"
+                    android:singleLine="true"
                     android:textColor="@color/review_card_color"
                     android:textSize="14dp" />
 
