--- a/android/app/src/main/res/layout/single_item_review_list.xml
+++ b/android/app/src/main/res/layout/single_item_review_list.xml
@@ -146,6 +146,22 @@
             app:layout_constraintStart_toEndOf="@id/ivLike"
             app:layout_constraintTop_toTopOf="@id/ivLike" />
 
+
+        <ImageView
+            android:id="@+id/ivDelete"
+            android:layout_width="24sp"
+            android:layout_height="24sp"
+            android:layout_marginEnd="@dimen/margin_8"
+            android:text="12"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:src="@drawable/delete"
+            android:textColor="@color/text_Color"
+            android:textSize="16sp"
+            android:visibility="visible"
+           app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
