--- a/android/app/src/main/res/layout/single_item_message_list.xml
+++ b/android/app/src/main/res/layout/single_item_message_list.xml
@@ -32,10 +32,10 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
-            android:fontFamily="@font/muli"
+            android:fontFamily="@font/muli_bold"
             android:maxLines="1"
             android:text="Muhammad Waqas Afzal "
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/buttonBackgroundColor"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/tvSentOrReceived"
             app:layout_constraintStart_toEndOf="@id/ivAvatar"
@@ -50,7 +50,6 @@
             android:layout_marginEnd="32dp"
             android:ellipsize="end"
             android:fontFamily="@font/muli"
-            android:text="Lorem Ipsum is simply dummy text of the printing and  Lorem Ipsum is simply dummy text of the printing and t type settings in the industry"
             android:textColor="@color/colorDarkGrey"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
