--- a/android/app/src/main/res/layout/activity_forget_password.xml
+++ b/android/app/src/main/res/layout/activity_forget_password.xml
@@ -34,25 +34,14 @@
                     android:id="@+id/ivLogo"
                     android:layout_width="180dp"
                     android:layout_height="170dp"
-                    android:layout_marginBottom="60dp"
-                    android:src="@drawable/ic_logo"
+                    android:layout_marginBottom="30dp"
+                    android:src="@drawable/app_icon"
                     app:layout_constraintBottom_toBottomOf="@id/layoutEmail"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/tvTagLine"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:fontFamily="@font/muli"
-                    android:text="@string/splash_tagline"
-                    android:textColor="@color/colorLightGrey"
-                    android:textSize="15sp"
-                    app:layout_constraintEnd_toEndOf="@id/ivLogo"
-                    app:layout_constraintStart_toStartOf="@id/ivLogo"
-                    app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+
 
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -65,7 +54,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTagLine"
+                    android:layout_marginBottom="100sp"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <EditText
