--- a/android/app/src/main/res/layout/activity_new_password.xml
+++ b/android/app/src/main/res/layout/activity_new_password.xml
@@ -24,23 +24,11 @@
         android:layout_width="180dp"
         android:layout_height="170dp"
         android:layout_marginTop="70dp"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/app_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />
 
-    <TextView
-        android:id="@+id/tvTagLine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8"
-        android:fontFamily="@font/muli"
-        android:text="@string/splash_tagline"
-        android:textColor="@color/colorLightGrey"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@id/ivLogo"
-        app:layout_constraintStart_toStartOf="@id/ivLogo"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
 
     <TextView
         android:id="@+id/lblChangePassword"
@@ -51,9 +39,9 @@
         android:text="@string/lbl_change_password"
         android:textColor="@color/colorDarkGrey"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/tvTagLine"
-        app:layout_constraintStart_toStartOf="@id/tvTagLine"
-        app:layout_constraintTop_toBottomOf="@id/tvTagLine" />
+        app:layout_constraintEnd_toEndOf="@id/ivLogo"
+        app:layout_constraintStart_toStartOf="@id/ivLogo"
+        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
 
 
 
