--- a/android/app/src/main/res/layout/activity_sign_in.xml
+++ b/android/app/src/main/res/layout/activity_sign_in.xml
@@ -27,18 +27,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tvTagLine"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_8"
-                android:fontFamily="@font/muli"
-                android:text="@string/splash_tagline"
-                android:textColor="@color/colorLightGrey"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="@id/ivLogo"
-                app:layout_constraintStart_toStartOf="@id/ivLogo"
-                app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+<!--            <TextView-->
+<!--                android:id="@+id/tvTagLine"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="@dimen/margin_8"-->
+<!--                android:fontFamily="@font/muli"-->
+<!--                android:text="@string/splash_tagline"-->
+<!--                android:textColor="@color/colorLightGrey"-->
+<!--                android:textSize="15sp"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/ivLogo"-->
+<!--                app:layout_constraintStart_toStartOf="@id/ivLogo"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/ivLogo" />-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layoutEmail"
@@ -142,7 +142,7 @@
                 android:background="?attr/selectableItemBackground"
                 android:fontFamily="@font/muli_bold"
                 android:text="@string/forgot_password"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/buttonBackgroundColor"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
                 app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
@@ -154,7 +154,7 @@
             <!--            android:layout_marginTop="32sp"-->
             <!--            android:fontFamily="@font/muli_bold"-->
             <!--            android:text="@string/guest_continue"-->
-            <!--            android:textColor="@color/colorAccent"-->
+            <!--            android:textColor="@color/buttonBackgroundColor"-->
             <!--            android:textSize="13sp"-->
             <!--            android:background="?attr/selectableItemBackground"-->
             <!--            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"-->
