--- a/android/app/src/main/res/layout/create_review_bottom_dialog.xml
+++ b/android/app/src/main/res/layout/create_review_bottom_dialog.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/muli"
         android:text="@string/create_review"
-        android:textColor="@color/text_Color"
+        android:textColor="@color/colorDarkGrey"
         android:textFontWeight="600"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/muli"
         android:text="@string/enter_description"
-        android:textColor="@color/text_Color"
+        android:textColor="@color/colorDarkGrey"
         android:textFontWeight="500"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         android:paddingStart="20dp"
 
         android:scrollbars="vertical"
-        android:textColor="@color/text_Color"
+        android:textColor="@color/colorDarkGrey"
         android:textFontWeight="400"
         android:textSize="14sp"
         android:visibility="visible"
