--- a/android/app/src/main/res/layout/fragment_review.xml
+++ b/android/app/src/main/res/layout/fragment_review.xml
@@ -1,85 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipeToRefreshProfile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
-
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-<!--    <include-->
-<!--        layout="@layout/white_toolbar"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="180sp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/bg_header_app_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:elevation="50dp"
-        android:paddingBottom="10dp"
-        android:layout_marginStart="@dimen/margin_16"
-        android:layout_marginEnd="@dimen/margin_16"
-        android:id="@+id/rvReviews"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/layoutPlaceHolder"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:background="@color/background_color"
         android:orientation="vertical"
-        android:visibility="gone">
+        tools:context=".MainActivity">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/placeholder_no_data" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="180sp"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/bg_header_app_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:textDirection="anyRtl"
-            android:layout_width="wrap_content"
+        <SearchView
+            android:id="@+id/simpleSearchView"
+            android:layout_width="match_parent"
+            android:layout_marginStart="@dimen/margin_16"
+            android:layout_marginTop="8sp"
+            android:layout_marginEnd="@dimen/margin_16"
+            android:background="@color/colorWhite"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvReviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_16"
+            android:layout_marginTop="8sp"
+            android:layout_marginEnd="@dimen/margin_16"
+            android:elevation="50dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/simpleSearchView" />
+
+        <LinearLayout
+            android:id="@+id/layoutPlaceHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:fontFamily="@font/muli"
-            android:text="@string/lbl_no_reviews"
-            android:textColor="@color/colorDarkGrey"
-            android:textSize="24sp" />
+            android:orientation="vertical"
+            android:visibility="gone">
 
-<!--        <TextView-->
-<!--            android:textDirection="anyRtl"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="60dp"-->
-<!--            android:layout_marginTop="15dp"-->
-<!--            android:layout_marginEnd="60dp"-->
-<!--            android:fontFamily="@font/muli"-->
-<!--            android:gravity="center"-->
-<!--            android:text="@string/lbl_no_leaves"-->
-<!--            android:textColor="@color/colorDarkGrey"-->
-<!--            android:textSize="14sp" />-->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/placeholder_no_data" />
 
-    </LinearLayout>
-    <include layout="@layout/spinner"
-        android:visibility="gone"
-        android:id="@+id/spinner"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:fontFamily="@font/muli"
+                android:gravity="center"
+                android:text="@string/lbl_no_reviews"
+                android:textColor="@color/colorDarkGrey"
+                android:textDirection="anyRtl"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+        <include
+            android:id="@+id/spinner"
+            layout="@layout/spinner"
+            android:visibility="gone" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
