--- a/android/app/src/main/res/layout/single_item_review_list.xml
+++ b/android/app/src/main/res/layout/single_item_review_list.xml
@@ -6,7 +6,6 @@
     android:layout_marginBottom="8sp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="4dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +25,21 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/lblUserName"
+            android:text="@string/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/muli_bold"
+            android:maxLines="1"
+            android:textColor="@color/buttonBackgroundColor"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@id/ivAvatar"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/tvUserName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -34,28 +48,75 @@
             android:ellipsize="end"
             android:fontFamily="@font/muli"
             android:maxLines="1"
-            android:text="Muhammad Waqas Afzal "
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorDarkGrey"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/ivEdit"
-            app:layout_constraintStart_toEndOf="@id/ivAvatar"
+            app:layout_constraintStart_toEndOf="@id/lblUserName"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvLblReviewId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:text="@string/id"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/muli_bold"
+            android:maxLines="1"
+            android:textColor="@color/buttonBackgroundColor"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/lblUserName"
+            app:layout_constraintTop_toBottomOf="@+id/lblUserName" />
+
+        <TextView
+            android:id="@+id/tvReviewId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toStartOf="@+id/ivEdit"
+            android:fontFamily="@font/muli"
+            android:maxLines="1"
+            android:textColor="@color/colorDarkGrey"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@id/tvLblReviewId"
+           app:layout_constraintTop_toBottomOf="@id/tvUserName" />
 
 
         <TextView
+            android:id="@+id/tvLblReviewDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:text="@string/description2"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/muli_bold"
+            android:maxLines="1"
+            android:textColor="@color/buttonBackgroundColor"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/tvLblReviewId"
+            app:layout_constraintTop_toBottomOf="@+id/tvLblReviewId" />
+
+
+        <TextView
+            android:layout_marginStart="5dp"
+
             android:id="@+id/tvReviewDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:ellipsize="end"
             android:fontFamily="@font/muli"
-            android:text="Lorem Ipsum is simply dummy text of the printing and  Lorem Ipsum is simply dummy text of the printing and t type settings in the industry"
             android:textColor="@color/colorDarkGrey"
             android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@id/tvLblReviewDescription"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tvUserName"
-            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvLblReviewId" />
 
         <TextView
             android:visibility="gone"
@@ -110,7 +171,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_8"
             android:text="12"
-            android:textColor="@color/text_Color"
+            android:textColor="@color/colorDarkGrey"
             android:textSize="16sp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/ivDislike"
@@ -139,7 +200,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_8"
             android:text="12"
-            android:textColor="@color/text_Color"
+            android:textColor="@color/colorDarkGrey"
             android:textSize="16sp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/ivLike"
@@ -156,7 +217,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:src="@drawable/delete"
-            android:textColor="@color/text_Color"
+            android:textColor="@color/colorDarkGrey"
             android:textSize="16sp"
             android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
